tests/programs/valid/call.py
#!/usr/bin/env python

def f(x: int):
    pass
    
f(1)
