tests/programs/invalid/wrong_arg_type.py
#!/usr/bin/env python

#:: int -> none
def f(x):
    pass
    
f("1")
